fetch_demo/target/release/build/anyhow-c3a869f48cfdce87/stderr
error[E0432]: unresolved import `std::backtrace`
 --> /Users/pt839393/tmp/rust_2020/fetch_demo/target/release/build/anyhow-c3a869f48cfdce87/out/probe.rs:5:14
  |
5 |     use std::backtrace::{Backtrace, BacktraceStatus};
  |              ^^^^^^^^^ could not find `backtrace` in `std`

error[E0407]: method `backtrace` is not a member of trait `Error`
  --> /Users/pt839393/tmp/rust_2020/fetch_demo/target/release/build/anyhow-c3a869f48cfdce87/out/probe.rs:19:9
   |
19 | /         fn backtrace(&self) -> Option<&Backtrace> {
20 | |             let backtrace = Backtrace::capture();
21 | |             match backtrace.status() {
22 | |                 BacktraceStatus::Captured | BacktraceStatus::Disabled | _ => {}
23 | |             }
24 | |             unimplemented!()
25 | |         }
   | |_________^ not a member of trait `Error`

error[E0554]: #![feature] may not be used on the stable release channel
 --> /Users/pt839393/tmp/rust_2020/fetch_demo/target/release/build/anyhow-c3a869f48cfdce87/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0407, E0432, E0554.
For more information about an error, try `rustc --explain E0407`.
